QmlCompiler: Allow wrapping enums into int

This is what we do internally in the QML engine.

Fixes: QTBUG-104683
Change-Id: I2f8712cb2cdc56b6c483500627fd8a218edbad81
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>
(cherry picked from commit 3f3e961a5afe2e62f436f946c521ea4afab76dde)