tests/auto/qml/qmlcppcodegen/data/enumLookup.qml
@@ -1,0 +1,11 @@
+pragma Strict
+import QML
+
+QtObject {
+    property Component c: Component {
+        id: cc
+        QtObject {}
+    }
+        
+    property bool ready: cc.status == Component.Ready
+}
